fix(css): Remove text-align da seção para não afetar os filhos

--- a/css/components.css
+++ b/css/components.css
@@ -9,7 +9,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
     margin-top: 5.9375rem;
     margin-bottom: 5.9375rem;
     padding: 0 2rem;
